--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -19,7 +19,7 @@
                                 Ends within:
                             </h5>
                             <h5 class="product-info-details-left-panel-auction-time">
-                                {{product.time}}
+                                3 hours 25 mins 20 secs
                             </h5>
                             <h5 class="product-info-details-left-panel-current-price-header">
                                 Current Bid:
