--- a/web/html_components/public/signup.html
+++ b/web/html_components/public/signup.html
@@ -48,7 +48,7 @@
 
 
 
-    <style>
+<!--    <style>
         .my-drop-zone { border: dotted 3px lightgray; }
         .nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
         .another-file-over-class { border: dotted 3px green; }
@@ -137,7 +137,7 @@
      
         </div>
      
-    </div>
+    </div>-->
 
 
 
