--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -81,7 +81,12 @@
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                                             <div id="{{amenity.id}}" *ngFor="let amenity of amenityList">
-                                                 <p><input type="checkbox"/> {{amenity.title}}</p>
+                                                 <p><input type="checkbox"
+                                                      name="productAmenities"
+                                                      value="{{amenity.title}}"
+                                                      [checked]="setCurrentAmenities(amenity.id)"
+                                                      (change)="updateCheckedAmenities(amenity, $event)"
+                                                      /> {{amenity.title}}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -181,6 +186,14 @@
                                         </div>
                                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                                             <input [(ngModel)]="product.lastName" name="lastName" class="form-control input-custom-field" placeholder="Last Name" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                                            <h5 class="create-ad-label">Company Name</h5>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                                            <input [(ngModel)]="product.companyName" name="companyName" class="form-control input-custom-field" placeholder="Company Name" type="text"/>
                                         </div>
                                     </div>
                                     <div class="row form-group">
