--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -23,12 +23,12 @@
                  <div class="my-ads-product-layout">
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h2 class="my-ads-product-title"><a [routerLink]="['/productInfo']" (click)="selectProduct($event, 1)">{{product.title}}</a></h2>
+                            <h2 class="my-ads-product-title"><a [routerLink]="['/productInfo']" (click)="selectProduct($event, product.id)">{{product.title}}</a></h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                            <img class="img-responsive" src="resources/images/product/{{product.img}}">
+                            <img class="img-responsive" src="resources/images/product/{{product.img ? product.img : 'a.jpg'}}">
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
                             <div class="my-ads-product-description">{{product.description}}</div>
