--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -20,7 +20,7 @@
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <img class="img-responsive" src="resources/images/profile/{{user.img}}">
+                            <img class="img-responsive" src="resources/images/profile/{{user.img ? user.img : 'user.jpg'}}">
                         </div>
                     </div>
                 </div>
