--- a/web/html_components/member/dashboard.html
+++ b/web/html_components/member/dashboard.html
@@ -17,6 +17,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
                 <a href="manage-advert.jsp">
                     <div class="dashboard-box-option-layout">
+                        <img class="img-responsive" src="resources/images/manage-advert.png">
                         <h2>Manage Advert </h2>
                     </div>
                 </a>
@@ -24,6 +25,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
                 <a href="message.jsp">
                     <div class="dashboard-box-option-layout">
+                          <img class="img-responsive" src="resources/images/message.png">
                         <h2>Messages </h2>
                     </div>
                 </a>
@@ -31,6 +33,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
                 <a href="account.jsp">
                     <div class="dashboard-box-option-layout">
+                         <img class="img-responsive" src="resources/images/account-settings.png">
                         <h2>Account </h2>
                     </div>
                 </a>
@@ -40,6 +43,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
                 <a href="profile.jsp">
                     <div class="dashboard-box-option-layout">
+                         <img class="img-responsive" src="resources/images/profile.png">
                         <h2>Profile </h2>
                     </div>
                 </a>
@@ -47,6 +51,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
                 <a href="search.jsp">
                     <div class="dashboard-box-option-layout">
+                         <img class="img-responsive" src="resources/images/search.png">
                         <h2>Search </h2>
                     </div>
                 </a>
