--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                            <h5>Cell:</h5>
+                            <h5>Telephone:</h5>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                             <p>{{user.cellNo}}</p>
