--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -50,11 +50,11 @@
                 </div>
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 form-group">
-                        <input type="text" class="form-control product-info-details-input-custom-field" placeholder="Max Bid">
+                        <input [(ngModel)]="productBid.price" type="text" class="form-control product-info-details-input-custom-field" placeholder="Max Bid">
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 form-group">
-                        <button class="form-control product-info-details-custom-button">Place Bid !</button>
-                    </div>
+                        <button type="button"  (click)="postBid($event)" class="form-control product-info-details-custom-button">Place Bid !</button>
+                    </div>                    
                 </div>
                 <div class="row">
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-8 col-lg-8">
                         <div class="product-info-details-left-panel-previous-bids">
-                            <a [routerLink]="['/bids']" (click)="showBids($event, 1)">{{product.totalBids}}</a>
+                            <a [routerLink]="['/bids']" (click)="showBids($event, product.id)">{{product.totalBids}}</a>
                         </div>
                     </div>
                 </div>
