--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
+     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="profile-left-sidebar-ul margin-top-align">
             <li><a class="active" [routerLink]="['/profile']" (click)="profile($event)">Profile</a></li>
             <li><a [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
@@ -7,7 +7,7 @@
             <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 form-group">
+    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="user-profile-dashboard-header-layout margin-top-align">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
