--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -1,8 +1,6 @@
 <div class="search-box-layout-bg">
     <div class="steps">
         <div class="container">
-            {{msg}}
-            {{errorMsg}}
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                     <div class="row">
@@ -10,7 +8,7 @@
                             <img src="resources/images/steps1.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <a href="#signup"><span class="hd-content">Create an account</span></a> <br><span class="hd-content">and Login</span>
+                            <a href="#signup"><span class="hd-content" id="signup">Create an account</span></a> <br><span class="hd-content">and Login</span>
                         </div>
                     </div>
                 </div>
@@ -83,6 +81,12 @@
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                     <input type="text" #username id="username" class="form-control input-custom-field" placeholder="Your Email"/>
                                     <input type="password" #password id="password" class="form-control input-custom-field" placeholder="Your Password"/>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group">
+                                    <div class="msg">{{msg}}</div>
+                                    <div class="error-msg">{{errorMsg}}</div>
                                 </div>
                             </div>
                             <div class="row">
