alignment bug fixing

--- a/web/html_components/member/message/sent.html
+++ b/web/html_components/member/message/sent.html
@@ -1,16 +1,16 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a [routerLink]="['/inbox']" (click)="inbox($event)">Inbox</a></li>
             <li><a [routerLink]="['/sent']" (click)="sent($event)">Sent</a></li>
             <li><a [routerLink]="['/saved']" (click)="saved($event)">Saved</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="message-inbox-header-layout margin-top-align">
-                    <h3 class="message-inbox-header-title">Sent</h3>
+                    <h2 class="message-inbox-header-title">Sent</h2>
                 </div>
             </div>
         </div>
