--- a/web/html_components/member/account/notifications.html
+++ b/web/html_components/member/account/notifications.html
@@ -1,14 +1,14 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a [routerLink]="['/notifications']" (click)="notifications($event)">Notifications</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="message-inbox-header-layout margin-top-align">
-                    <h3 class="message-inbox-header-title">Notifications</h3>
+                    <h2 class="message-inbox-header-title">Notifications</h2>
                 </div>
             </div>
         </div>
