--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -1,5 +1,5 @@
 <div class="row margin-top-align">
-    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="featured-ad-left-sidebar-ul">
             <li><a href="manage-product.jsp">Create Ads</a></li>
             <li><a class="active" [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
@@ -15,12 +15,12 @@
 
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="row form-group">
-            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <h2 class="featured-ad-heading">Account Settings of Featured Ad</h2>
             </div>
         </div>
         <div class="row form-group">
-            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <form>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
