--- a/web/html_components/member/featuredad/ranking.html
+++ b/web/html_components/member/featuredad/ranking.html
@@ -1,5 +1,5 @@
 <div class="row margin-top-align">
-    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="featured-ad-left-sidebar-ul">
             <li><a href="manage-product.jsp">Create Ads</a></li>
             <li><a class="active" [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
