--- a/web/html_components/member/savedads.html
+++ b/web/html_components/member/savedads.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a href="manage-product.jsp">Create Ads</a></li>
             <li><a class="active" [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
@@ -12,7 +12,7 @@
             <li><a [routerLink]="['/faq']" (click)="faq($event)">FAQ</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <h2 class="saved-ads-product-heading">Saved Ads</h2>
