--- a/web/html_components/public/basicsearch.html
+++ b/web/html_components/public/basicsearch.html
@@ -1,14 +1,14 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a [routerLink]="['/basicsearch']" (click)="basicsearch($event)">Basic Search</a></li>
             <li><a [routerLink]="['/advancedsearch']" (click)="advancedsearch($event)">Advanced Search</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h1 class="text-center basic-search-header">Basic Search</h1>
+                <h2 class="basic-search-header">Basic Search</h2>
             </div>
         </div>
         <div class="row form-group">
