alignment bug fixing

--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -21,16 +21,16 @@
         </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                    <h4>Featured Ad</h4>
+                    <h4 class="featured-ad-label">Featured Ad</h4>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
-                    <h4>Ad Title</h4>
+                    <h4 class="featured-ad-label">Ad Title</h4>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                    <h4>Postcode</h4>
+                    <h4 class="featured-ad-label">Postcode</h4>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                    <h4>Ad Bids</h4>
+                    <h4 class="featured-ad-label">Ad Bids</h4>
                 </div>
             </div>
             <div class="row form-group">
