deleted db related files are back

--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -344,7 +344,7 @@
                                                 <a href="#step6" role="tab" data-toggle="tab"><button type="button" id="step7-previous" name="step7-previous" class="form-control common-custom-button">Previous Step</button></a>
                                             </div>
                                             <div class="col-xs-6 col-sm-offset-4 col-sm-4 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
-                                                <button type="button" id="step7-next" name="step7-next" class="form-control common-custom-button">Place Your Advert</button>
+                                                <button type="submit" id="step7-next" name="step7-next" class="form-control common-custom-button">Place Your Advert</button>
                                             </div>
                                         </div>
                                     </div>                                
