send msg section updated

--- a/web/html_components/member/message/showmessage.html
+++ b/web/html_components/member/message/showmessage.html
@@ -48,10 +48,10 @@
     </div>
      
 </div>
-Show my message
+<!--Show my message
 
 
-============================<br/>
+============================<br/>-->
 
 
 <!--id: {{message.id}} , subject {{message.subject}}, To : {{message.to.firstName}} {{message.to.lastName}}
