fb api is integrated, template update

--- a/web/html_components/public/signup.html
+++ b/web/html_components/public/signup.html
@@ -4,11 +4,11 @@
             <div class="signup-pagelet">
                 <div class="signup-block">
                     <h1>Sign Up</h1>
-                    <div class="row form-group">
+<!--                    <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="submit" class="form-control signup-facebook-button"><i class="fa fa-facebook"></i>&nbsp;&nbsp; Log in with Facebook</button> 
                         </div>
-                    </div>
+                    </div>-->
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <input name="firstName" [(ngModel)]="user.firstName" class="form-control input-custom-field" placeholder="First Name"/>
