--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a href="manage-product.jsp">Create Ads</a></li>
+            <li><a (click)="myproduct($event, 0)">Create Ads</a></li>
             <li><a class="active" [routerLink]="['/myads']">My Ads</a></li>
             <li><a [routerLink]="['/savedads']">Saved Ads</a></li>
             <li><ul class="nav nav-pills nav-stacked" id="stacked-menu">
@@ -65,7 +65,7 @@
                     </div>
                     <div class="row form-group my-ads-option-links">
                         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href=""><div class="option"> Edit</div></a>
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i><a (click)="myproduct($event, product.id)"><div class="option"> Edit</div></a>
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
                             <i class="fa fa-eye" aria-hidden="true"></i><a href=""><div class="option"> View</div></a>
